[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/planter.png" type="Texture" id=1]
[ext_resource path="res://scripts/Planter.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 4.5 )

[node name="Planter" type="Area2D" groups=["planters"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11.5 )
shape = SubResource( 1 )

[node name="PlantSprite" type="AnimatedSprite" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Planter_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Planter_body_exited"]
